# 3C-Rrs-O25

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  DEVELOPMENT.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: ci.yml
data/: G0p.txt  G0w.txt  G1p.txt  G1w.txt  README.md  abs_scat_seawater_20d_35PSU_20230922_short.txt  example_data_NIOZ_jetty_2.csv  vars_aph_v2.npz
examples/: example_single_spectrum.csv  run_timeseries.py  solar_az_el.py
examples/timeseries/data/: example_time_series_data.csv
examples/timeseries/output/: Rrs_timeseries_20251027.nc  Rrs_timeseries_20260228.nc  Rrs_timeseries_20260301.nc  Rrs_timeseries_20260305.nc
examples/timeseries/src/: README.md  debug_import_cli.py  flags_jetty.py  load_jetty_data.py  run_timeseries.py  utils.py
notebooks/: 01_QuickStart_Example-checkpoint.ipynb  02_TimeSeries_Processing-checkpoint.ipynb  03_Parameter_Analysis-checkpoint.ipynb
src/rrs3c/: __init__.py  model.py  model.py.PLACEHOLDER.txt
tests/: test_model_import.py
tools/: git_init_and_publish.ps1  make_release.ps1  run_example.ps1  setup_project.ps1
